# cpp-demo-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
src/: main.cpp
tests/: test_main.cpp
